--- a/capycoding-app/package.json
+++ b/capycoding-app/package.json
@@ -16,6 +16,7 @@
 		"@lucide/svelte": "^0.544.0",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2",
+		"@thisux/sveltednd": "^0.0.20",
 		"clsx": "^2.1.1",
 		"neverthrow": "^8.2.0",
 		"runed": "^0.35.1",
@@ -26,7 +27,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.0",
 		"@internationalized/date": "^3.8.1",
-		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.1.13",
@@ -48,6 +49,7 @@
 		"typescript": "~5.6.2",
 		"typescript-svelte-plugin": "^0.3.50",
 		"vaul-svelte": "^1.0.0-next.7",
-		"vite": "^6.0.3"
+		"vite": "^6.0.3",
+		"vite-plugin-devtools-json": "^1.0.0"
 	}
 }
