--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,10 +3,10 @@ pre-commit:
   commands:
     biome_fix:
       glob: "**/*.{js,jsx,ts,tsx,json,css,scss,md,html}"
-      # root: capycoding-app
+      root: capycoding-app
       exclude:
         # - "capycoding-esp/*"
-      run: cd capycoding-app && bunx biome check --write {staged_files}
+      run: just check
       stage_fixed: true
 
 pre-push:
