--- a/capycoding-app/package.json
+++ b/capycoding-app/package.json
@@ -22,6 +22,7 @@
 		"runed": "^0.35.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
+		"taurpc": "^1.8.1",
 		"tw-animate-css": "^1.4.0"
 	},
 	"devDependencies": {
