--- a/capycoding-app/src-tauri/Cargo.toml
+++ b/capycoding-app/src-tauri/Cargo.toml
@@ -14,6 +14,8 @@ edition = "2021"
 name = "capycoding_app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
+
+
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
@@ -23,3 +25,10 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
+
+
+taurpc = "0.5.2"
+
+specta = { version = "=2.0.0-rc.22", features = ["derive"] }
+# specta-typescript = "0.0.9"
+tokio = { version = "1", features = ["full"] }
