check if this flash works

--- a/capycoding-esp/Cargo.toml
+++ b/capycoding-esp/Cargo.toml
@@ -82,11 +82,15 @@ embedded-hal-bus = "0.2.0"
  
 profont = "0.7.0"
 weact-studio-epd = { version = "0.1.2", features = ["blocking"] }
-heapless = "0.9.1"
+heapless = { version = "0.9.1", features = ["serde"] }
 
 # mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "1028ac24f83920fd95a5585a85ef943901ee63ac", features = ["epd-weact" ]}
 mousefood = { git = "https://github.com/suri-codes/mousefood.git", branch = "main", features = ["epd-weact", "portable-atomic", "framebuffer"]}
 ratatui = { git  = "https://github.com/suri-codes/ratatui.git", branch = "main", default-features = false}
+esp-storage = { version = "0.8.0", features = ["esp32c3"] }
+serde = {version = "1.0.228", default-features = false}
+postcard = "1.1.3"
+embedded-storage = "0.3.1"
 
 
 [patch.crates-io]
@@ -96,7 +100,8 @@ ratatui-core = { git = "https://github.com/suri-codes/ratatui.git", branch = "ma
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
-opt-level = "s"
+# opt-level = "s"
+opt-level = 3
 
 [profile.release]
 codegen-units    = 1     # LLVM can perform better optimizations using a single thread
