--- a/capycoding-esp/Cargo.toml
+++ b/capycoding-esp/Cargo.toml
@@ -91,6 +91,7 @@ esp-storage = { version = "0.8.0", features = ["esp32c3"] }
 serde = {version = "1.0.228", default-features = false}
 postcard = "1.1.3"
 embedded-storage = "0.3.1"
+embassy-sync = "0.7.2"
 
 
 [patch.crates-io]
