--- a/capycoding-esp/Cargo.toml
+++ b/capycoding-esp/Cargo.toml
@@ -32,6 +32,7 @@ embassy-net = { version = "0.7.0", features = [
   "medium-ethernet",
   "tcp",
   "udp",
+  "dns"
 ] }
 embedded-io = "0.7.1"
 embedded-io-async = "0.7.0"
@@ -68,6 +69,9 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
   "socket-raw",
   "socket-tcp",
   "socket-udp",
+
+  
+"dns-max-server-count-4", 
 ] }
 trouble-host = { version = "0.5.0", features = ["gatt"] }
 
@@ -94,6 +98,9 @@ embedded-storage = "0.3.1"
 embassy-sync = "0.7.2"
 
 
+reqwless = { version = "0.13.0", default-features = false, features = [
+    "embedded-tls",
+] }
 
 embassy-futures = "0.1.2"
 
