--- a/capycoding-app/package.json
+++ b/capycoding-app/package.json
@@ -13,7 +13,9 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@lucide/svelte": "^0.544.0",
+                "@livekit/components-core": "^0.12.10",
+                "@livekit/components-styles": "^1.1.6",
+                "@lucide/svelte": "^0.544.0",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2",
 		"@thisux/sveltednd": "^0.0.20",
