we have communication over bluetooth

--- a/capycoding-esp/Cargo.toml
+++ b/capycoding-esp/Cargo.toml
@@ -105,6 +105,7 @@ reqwless = { version = "0.13.0", default-features = false, features = [
 embassy-futures = "0.1.2"
 
 ble-types = {path = "../ble-types"}
+once_cell = {version="1.21.3", default-features = false, features = [ "critical-section"]}
 
 [patch.crates-io]
 ratatui = { git = "https://github.com/suri-codes/ratatui.git", branch = "main" }
