--- a/capycoding-app/package.json
+++ b/capycoding-app/package.json
@@ -13,17 +13,18 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-                "@livekit/components-core": "^0.12.10",
-                "@livekit/components-styles": "^1.1.6",
-                "@lucide/svelte": "^0.544.0",
+		"@livekit/components-core": "^0.12.10",
+		"@livekit/components-styles": "^1.1.6",
+		"@lucide/svelte": "^0.544.0",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2",
-                "@thisux/sveltednd": "^0.0.20",
-                "clsx": "^2.1.1",
-                "neverthrow": "^8.2.0",
-                "runed": "^0.35.1",
-                "livekit-client": "^2.5.6",
-                "tailwind-merge": "^3.3.1",
+		"@thisux/sveltednd": "^0.0.20",
+		"@xenova/transformers": "^2.17.2",
+		"clsx": "^2.1.1",
+		"livekit-client": "^2.5.6",
+		"neverthrow": "^8.2.0",
+		"runed": "^0.35.1",
+		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
 		"taurpc": "^1.8.1",
 		"tw-animate-css": "^1.4.0"
