--- a/capycoding-app/src-tauri/Cargo.toml
+++ b/capycoding-app/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 jsonwebtoken = "9"
+dirs = "5"
 
 
 
